# vm

./: .gitignore  Cargo.toml  DESIGN.md  README.md  a.txt  b.txt  broken.asm  flake.nix  rust-toolchain.toml  sha3-256-broken.mir  sha3-256.mir
.helix/: languages.toml
benches/: ops.rs
src/: assembler.rs  lib.rs  main.rs  mir.rs  vm_tests.rs
src/mir/: ast.rs  cfg.rs  parse.rs  pass.rs  ssa.rs  tests.rs
src/mir/parse/: tests.rs
src/mir/ssa/: builder.rs  id_map.rs
tests/: aoc_2025_d1_p1.mir  atoi.asm  atoi.mir  data.asm  if-else.mir  loop.mir  sha3-256.mir  sha3_256.rs  test.asm  test.mir
tree-sitter-mir/: config.json  grammar.js  package.json  tree-sitter.json
tree-sitter-mir/queries/: highlights.scm  locals.scm  textobjects.scm
tree-sitter-mir/src/: grammar.json  node-types.json  parser.c
