[package]
name = "vm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.16"
ariadne = "0.6.0"
chumsky = "0.12.0"
const-hex = "1.18.0"
either = "1.15.0"
hex-literal = "1.1.0"
indexmap = "2.13.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["ansi", "env-filter"] }
